@@ -32,6 +32,7 @@
 
 #define SYX_IMAGE_PATH SYX_STRINGIFY(IMAGE_PATH)
 #define SYX_ROOT_PATH SYX_STRINGIFY(ROOT_PATH)
+#define SYX_PLUGIN_PATH SYX_STRINGIFY(PLUGIN_PATH)
 
 /* Version */
 
